...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Hdu-0O-ub8" id="ffz-Nv-nMc"/>
                            <outlet property="delegate" destination="Hdu-0O-ub8" id="D5K-JQ-mVM"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Headaches" id="fDK-dW-SvI">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ocj-Gl-LZc">
                            <connections>
                                <segue destination="Yj5-LS-Xb4" kind="presentation" id="QHx-vd-vOZ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aer-3r-mbm" id="eit-xf-c6j">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="89.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="5" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ja-OS-7Q9">
                                            <rect key="frame" x="18" y="43" width="378" height="31"/>
                                            <accessibility key="accessibilityConfiguration" hint="Severity of headache on a scale of 1 to 5" identifier="severitySlider" label="Severity"/>
                                            <connections>
                                                <action selector="severityChanged:" destination="hHq-NU-81y" eventType="valueChanged" id="NVk-0R-rea"/>
                                            </connections>
                                        </slider>
                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="tMT-QW-Qt3">
                                            <rect key="frame" x="20" y="11" width="374" height="24"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Hf-b6-jcl">
                                            <rect key="frame" x="20" y="20" width="374" height="3.5"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                            <state key="normal" title="Manage Medications"/>
                                            <connections>
                                                <segue destination="Ma6-c3-4w6" kind="show" identifier="ManageMedications" id="Yah-zO-9bm"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <constraints>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="hHq-NU-81y" id="zfR-2Y-C2j"/>
                            <outlet property="delegate" destination="hHq-NU-81y" id="dXr-gE-zEd"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Headache" id="srh-YA-HMT">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="PnY-pE-1aM">
                            <connections>
                                <segue destination="OO3-NU-HmY" kind="unwind" unwindAction="cancel:" id="agK-yR-IDg"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Qqd-fq-JXs">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ELK-9I-TYg" id="GBE-0X-5qj"/>
                            <outlet property="delegate" destination="ELK-9I-TYg" id="GVM-u6-N7j"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Medications" id="LQI-dS-IyL">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="PBD-db-16Y">
                            <connections>
                                <action selector="done:" destination="ELK-9I-TYg" id="QXc-xK-tNH"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AAP-gV-RvP">
...
                                        <rect key="frame" x="0.0" y="55.5" width="414" height="80"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="91U-oH-q3y" id="oCn-qv-Brv">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ibuprofen" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTZ-kE-DN7">
                                                    <rect key="frame" x="20" y="20" width="374" height="39.5"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                </textField>
                                            </subviews>
...
