...
        
        if let medication = self.medication {
            self.title = "Edit \(medication.name)"
            medicationNameTextField.text = medication.name
            dosageDescriptionTextField.text = medication.desc
        } else {
            self.title = "New Medication"
            doneButton.isEnabled = false
        }
        
        medicationNameTextField.delegate = self
        dosageDescriptionTextField.delegate = self        
    }
...
